--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.2.10
 dj-database-url==0.5.0
 Django==3.1
 gunicorn==20.0.4
+numpy==1.19.1
+opencv-python==4.4.0.42
 psycopg2==2.8.5
 pytz==2020.1
 sqlparse==0.3.1
