--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
 asgiref==3.2.10
+certifi==2020.6.20
+cycler==0.10.0
+decorator==4.4.2
 dj-database-url==0.5.0
 Django==3.1
 gunicorn==20.0.4
+imageio==2.9.0
+imutils==0.5.3
+kiwisolver==1.2.0
+matplotlib==3.3.1
+networkx==2.5
 numpy==1.19.1
 opencv-python==4.4.0.42
+Pillow==7.2.0
 psycopg2==2.8.5
+pyparsing==2.4.7
+python-dateutil==2.8.1
 pytz==2020.1
+PyWavelets==1.1.1
+scikit-image==0.17.2
+scipy==1.5.2
+six==1.15.0
 sqlparse==0.3.1
+tifffile==2020.9.3
 whitenoise==5.2.0
