--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ kiwisolver==1.2.0
 matplotlib==3.3.1
 networkx==2.5
 numpy==1.19.1
-opencv-python==4.4.0.42
+opencv-python-headless==4.2.0.32
 Pillow==7.2.0
 psycopg2==2.8.5
 pyparsing==2.4.7
